[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.20"
reqwest = { version = "0.12", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
