[package]
name = "cef-ui-simple"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
sandbox = []
default = ["sandbox"]

[build-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

[dependencies]
cef-ui = { path = "../cef-ui" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
winit = "0.29"
