[package]
name = "cef-ui-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
url = "2.5"
percent-encoding = "2.3"
bzip2 = "0.4"
walkdir = "2.5"
bindgen = "0.69"

[[bin]]
name = "cef-artifacts"
path = "src/bin/cef_artifacts.rs"

[[bin]]
name = "cef-clean"
path = "src/bin/cef_clean.rs"

[[bin]]
name = "cef-build"
path = "src/bin/cef_build.rs"
