[package]
name = "cef-ui-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
cef-ui-util = { path = "../cef-ui-util" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.5"
bindgen = "0.69"

[[bin]]
name = "cef-artifacts"
path = "src/bin/cef_artifacts.rs"

[[bin]]
name = "cef-build"
path = "src/bin/cef_build.rs"

[[bin]]
name = "cef-clean"
path = "src/bin/cef_clean.rs"
