[package]
name = "cef-ui-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
cef-ui-util = { path = "../cef-ui-util" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }


[[bin]]
name = "cef-artifacts"
path = "src/cef_artifacts.rs"

[[bin]]
name = "cef-build"
path = "src/cef_build.rs"

[[bin]]
name = "cef-clean"
path = "src/cef_clean.rs"
