[package]
name = "cef-ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bindings = { package = "cef-ui-bindings", path = "../cef-ui-bindings" }
anyhow = { workspace = true }
paste = "1.0"
dunce = "1.0"
log = "0.4"
tracing-log = "0.2.0"
parking_lot = "0.12"
bitflags = "2.4"
chrono = "0.4"

