[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
anyhow = { workspace = true }

[dependencies]
anyhow = { workspace = true }
widestring = "1.0"
paste = "1.0"

# Bindings for x86_64 Linux.
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
cef-ui-bindings-linux-x86_64 = { path = "../bindings-linux-x86_64" }

[dev-dependencies]
bevy = "0.13.0"
